# test-manifest

./: .gitignore  Dockerfile  beeai-provider-local.yaml  beeai-provider.docker.yaml  beeai-provider.yaml  pyproject.toml  registry.yaml
src/crewai_agent/: __init__.py  crew.py  main.py
