[project]
name = "crewai_agent"
version = "0.1.0"
description = "crewai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "beeai-sdk>=0.0.1",
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
crewai-agent = "crewai_agent.main:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
